--- a/Clase 2a/Node-clase-2-master/package.json
+++ b/Clase 2a/Node-clase-2-master/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/malerey/Node-clase-2#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.10.7",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
